[gd_scene load_steps=21 format=3 uid="uid://bervrm08asanb"]

[ext_resource type="Script" uid="uid://cgxewe8sy2juq" path="res://scenes/main.gd" id="1_w8wmq"]
[ext_resource type="Script" uid="uid://dc1rf43vo6q8x" path="res://scripts/camera_movement.gd" id="3_wubvj"]
[ext_resource type="Script" uid="uid://boqevddxhy35r" path="res://scripts/borders.gd" id="4_ieimj"]
[ext_resource type="Texture2D" uid="uid://cjk3ptono37qa" path="res://assets/background/middle.png" id="4_wejd8"]
[ext_resource type="Texture2D" uid="uid://bm1rlrmwjetky" path="res://assets/background/foreground.png" id="4_wubvj"]
[ext_resource type="FontFile" uid="uid://cmi6201kug2db" path="res://assets/fonts/metalslug-font.ttf" id="6_2ovie"]
[ext_resource type="Texture2D" uid="uid://c8novhkjnddnv" path="res://assets/background/back.png" id="6_wejd8"]
[ext_resource type="Texture2D" uid="uid://de1nhtjna8jsv" path="res://assets/ui/w_dark.png" id="7_jxooh"]
[ext_resource type="Texture2D" uid="uid://b0aliim7qh1x7" path="res://assets/ui/a_key_dark.png" id="8_6gxdu"]
[ext_resource type="PackedScene" uid="uid://bxh21c6qx4vuj" path="res://scenes/levels/WinScreen.tscn" id="9_2ovie"]
[ext_resource type="Texture2D" uid="uid://doytvbgotemvd" path="res://assets/ui/s_dark.png" id="9_ixq74"]
[ext_resource type="PackedScene" uid="uid://bxoewdrac1lku" path="res://ui/Losescreen.tscn" id="10_ht1ge"]
[ext_resource type="Texture2D" uid="uid://ccvpy5y0p488n" path="res://assets/ui/d_dark.png" id="10_oh1hm"]
[ext_resource type="Texture2D" uid="uid://uw131pybrd5r" path="res://assets/ui/arrow_up_dark.png" id="11_h3m2t"]
[ext_resource type="Texture2D" uid="uid://bpno8misn06f2" path="res://assets/ui/arrow_left_dark.png" id="12_plvqx"]
[ext_resource type="Texture2D" uid="uid://bmm1bm5fmbr18" path="res://assets/ui/arrow_right_dark.png" id="13_kwl1m"]
[ext_resource type="Texture2D" uid="uid://dpeabdkk31qlo" path="res://assets/ui/arrow_down_dark.png" id="14_ql35f"]
[ext_resource type="PackedScene" uid="uid://vjgqvhmm7vnw" path="res://ui/health_bar_player.tscn" id="18_plvqx"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_urp3g"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_plvqx"]

[node name="Main" type="Node2D"]
script = ExtResource("1_w8wmq")

[node name="Timer" type="Timer" parent="."]
wait_time = 20.0
one_shot = true

[node name="Timer2" type="Timer" parent="."]
one_shot = true

[node name="ParallaxBackground" type="ParallaxBackground" parent="."]
offset = Vector2(37, 49)
transform = Transform2D(1, 0, 0, 1, 37, 49)

[node name="Back" type="ParallaxLayer" parent="ParallaxBackground"]
motion_scale = Vector2(0.5, 1)
motion_mirroring = Vector2(1344, 0)

[node name="Sprite2D" type="Sprite2D" parent="ParallaxBackground/Back"]
texture = ExtResource("6_wejd8")
centered = false

[node name="Sprite2D2" type="Sprite2D" parent="ParallaxBackground/Back"]
position = Vector2(112, 0)
texture = ExtResource("6_wejd8")
centered = false

[node name="Sprite2D3" type="Sprite2D" parent="ParallaxBackground/Back"]
position = Vector2(224, 0)
texture = ExtResource("6_wejd8")
centered = false

[node name="Sprite2D4" type="Sprite2D" parent="ParallaxBackground/Back"]
position = Vector2(336, 0)
texture = ExtResource("6_wejd8")
centered = false

[node name="Sprite2D5" type="Sprite2D" parent="ParallaxBackground/Back"]
position = Vector2(448, 0)
texture = ExtResource("6_wejd8")
centered = false

[node name="Sprite2D6" type="Sprite2D" parent="ParallaxBackground/Back"]
position = Vector2(560, 0)
texture = ExtResource("6_wejd8")
centered = false

[node name="Sprite2D7" type="Sprite2D" parent="ParallaxBackground/Back"]
position = Vector2(672, 0)
texture = ExtResource("6_wejd8")
centered = false

[node name="Sprite2D8" type="Sprite2D" parent="ParallaxBackground/Back"]
position = Vector2(784, 0)
texture = ExtResource("6_wejd8")
centered = false

[node name="Sprite2D9" type="Sprite2D" parent="ParallaxBackground/Back"]
position = Vector2(896, 0)
texture = ExtResource("6_wejd8")
centered = false

[node name="Sprite2D10" type="Sprite2D" parent="ParallaxBackground/Back"]
position = Vector2(1008, 0)
texture = ExtResource("6_wejd8")
centered = false

[node name="Sprite2D11" type="Sprite2D" parent="ParallaxBackground/Back"]
position = Vector2(1120, 0)
texture = ExtResource("6_wejd8")
centered = false

[node name="Sprite2D12" type="Sprite2D" parent="ParallaxBackground/Back"]
position = Vector2(1232, 0)
texture = ExtResource("6_wejd8")
centered = false

[node name="Middle" type="ParallaxLayer" parent="ParallaxBackground"]
position = Vector2(0, 11)
motion_scale = Vector2(0.8, 1)
motion_mirroring = Vector2(1280, 0)

[node name="Sprite2D" type="Sprite2D" parent="ParallaxBackground/Middle"]
texture = ExtResource("4_wejd8")
centered = false

[node name="Sprite2D2" type="Sprite2D" parent="ParallaxBackground/Middle"]
position = Vector2(256, 0)
texture = ExtResource("4_wejd8")
centered = false

[node name="Sprite2D3" type="Sprite2D" parent="ParallaxBackground/Middle"]
position = Vector2(512, 0)
texture = ExtResource("4_wejd8")
centered = false

[node name="Sprite2D4" type="Sprite2D" parent="ParallaxBackground/Middle"]
position = Vector2(768, 0)
texture = ExtResource("4_wejd8")
centered = false

[node name="Sprite2D5" type="Sprite2D" parent="ParallaxBackground/Middle"]
position = Vector2(1024, 0)
texture = ExtResource("4_wejd8")
centered = false

[node name="Front" type="ParallaxLayer" parent="ParallaxBackground"]
position = Vector2(0, 24)
motion_mirroring = Vector2(1376, 0)

[node name="Sprite2D" type="Sprite2D" parent="ParallaxBackground/Front"]
texture = ExtResource("4_wubvj")
centered = false

[node name="Sprite2D2" type="Sprite2D" parent="ParallaxBackground/Front"]
position = Vector2(688, 0)
texture = ExtResource("4_wubvj")
centered = false

[node name="UI-Tutorial" type="Node2D" parent="."]
position = Vector2(169, 95)

[node name="Move" type="Label" parent="UI-Tutorial"]
offset_left = 454.0
offset_top = 353.0
offset_right = 508.0
offset_bottom = 377.0
scale = Vector2(2, 2)
theme_override_colors/font_color = Color(1, 0.360784, 0.0117647, 1)
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("6_2ovie")
theme_override_font_sizes/font_size = 23
text = "Move"

[node name="WASD" type="Node2D" parent="UI-Tutorial/Move"]
position = Vector2(13.5, 13.5)
scale = Vector2(0.5, 0.5)

[node name="Sprite2D" type="Sprite2D" parent="UI-Tutorial/Move/WASD"]
modulate = Color(0.742527, 0.311119, 0.244126, 1)
position = Vector2(29, 48.5)
texture = ExtResource("7_jxooh")

[node name="Sprite2D2" type="Sprite2D" parent="UI-Tutorial/Move/WASD"]
modulate = Color(0.741176, 0.309804, 0.243137, 1)
position = Vector2(-10.5, 90)
texture = ExtResource("8_6gxdu")

[node name="Sprite2D3" type="Sprite2D" parent="UI-Tutorial/Move/WASD"]
modulate = Color(0.741176, 0.309804, 0.243137, 1)
position = Vector2(28.5, 90.5)
texture = ExtResource("9_ixq74")

[node name="Sprite2D4" type="Sprite2D" parent="UI-Tutorial/Move/WASD"]
modulate = Color(0.741176, 0.309804, 0.243137, 1)
position = Vector2(67.5, 91)
texture = ExtResource("10_oh1hm")

[node name="Shoot" type="Label" parent="UI-Tutorial"]
offset_left = 698.0
offset_top = 356.0
offset_right = 755.0
offset_bottom = 380.0
scale = Vector2(2, 2)
theme_override_colors/font_color = Color(1, 0.360784, 0.0117647, 1)
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("6_2ovie")
theme_override_font_sizes/font_size = 23
text = "Shoot"

[node name="Arrows" type="Node2D" parent="UI-Tutorial/Shoot"]
modulate = Color(0.741176, 0.309804, 0.243137, 1)
position = Vector2(28, 14)
scale = Vector2(0.5, 0.5)

[node name="Sprite2D" type="Sprite2D" parent="UI-Tutorial/Shoot/Arrows"]
position = Vector2(3, 44)
texture = ExtResource("11_h3m2t")

[node name="Sprite2D2" type="Sprite2D" parent="UI-Tutorial/Shoot/Arrows"]
position = Vector2(-35, 87)
texture = ExtResource("12_plvqx")

[node name="Sprite2D3" type="Sprite2D" parent="UI-Tutorial/Shoot/Arrows"]
position = Vector2(42, 86)
texture = ExtResource("13_kwl1m")

[node name="Sprite2D4" type="Sprite2D" parent="UI-Tutorial/Shoot/Arrows"]
position = Vector2(3, 86)
texture = ExtResource("14_ql35f")

[node name="Players" type="Node2D" parent="."]
position = Vector2(-2, 2)

[node name="Camera2D" type="Camera2D" parent="."]
position = Vector2(680, 410)
limit_left = 90
script = ExtResource("3_wubvj")

[node name="WinScreen" parent="Camera2D" instance=ExtResource("9_2ovie")]
visible = false
scale = Vector2(2.30576, 3.14308)

[node name="Losescreen" parent="Camera2D" instance=ExtResource("10_ht1ge")]
visible = false
offset_left = -45.0
offset_top = -74.0
offset_right = -45.0
offset_bottom = -74.0
scale = Vector2(1.40592, 2.67974)

[node name="Spawn" type="Node2D" parent="."]

[node name="Marker2D" type="Marker2D" parent="Spawn"]
position = Vector2(229, 352)
gizmo_extents = 127.1

[node name="Marker2D2" type="Marker2D" parent="Spawn"]
position = Vector2(361, 581)
gizmo_extents = 127.1

[node name="borders" type="Node2D" parent="."]
script = ExtResource("4_ieimj")

[node name="upper-limit" type="StaticBody2D" parent="borders"]
position = Vector2(0, 167)

[node name="CollisionShape2D" type="CollisionShape2D" parent="borders/upper-limit"]
scale = Vector2(1000, 10)
shape = SubResource("RectangleShape2D_urp3g")

[node name="floor-limit" type="StaticBody2D" parent="borders"]
position = Vector2(0, 890)

[node name="CollisionShape2D" type="CollisionShape2D" parent="borders/floor-limit"]
scale = Vector2(1000, 10)
shape = SubResource("RectangleShape2D_urp3g")

[node name="left-limit" type="StaticBody2D" parent="borders"]
position = Vector2(-35, 0)
rotation = 1.5708

[node name="CollisionShape2D" type="CollisionShape2D" parent="borders/left-limit"]
scale = Vector2(1000, 10)
shape = SubResource("RectangleShape2D_urp3g")

[node name="right-limit" type="StaticBody2D" parent="borders"]
position = Vector2(2404, 0)
rotation = 1.5708

[node name="CollisionShape2D" type="CollisionShape2D" parent="borders/right-limit"]
scale = Vector2(1000, 10)
shape = SubResource("RectangleShape2D_urp3g")

[node name="Area2D" type="Area2D" parent="borders"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="borders/Area2D"]
position = Vector2(1455, 529)
scale = Vector2(3, 25)
shape = SubResource("RectangleShape2D_plvqx")

[node name="Enemies" type="Node2D" parent="."]

[node name="Marker2D" type="Marker2D" parent="."]
position = Vector2(2362, 471)

[node name="Enemies_boss#Label" type="Label" parent="."]
offset_left = -15.0
offset_top = -58.0
offset_right = 25.0
offset_bottom = -35.0
text = "Boss"

[node name="WinScreen" parent="." instance=ExtResource("9_2ovie")]
visible = false
offset_left = 463.0
offset_top = 337.0
offset_right = 463.0
offset_bottom = 337.0
scale = Vector2(2.30576, 3.14308)

[node name="Losescreen" parent="." instance=ExtResource("10_ht1ge")]
visible = false
offset_left = 469.0
offset_top = 344.0
offset_right = 469.0
offset_bottom = 344.0
scale = Vector2(1.40592, 2.67974)

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="HealthBarPlayer" parent="CanvasLayer" instance=ExtResource("18_plvqx")]

[connection signal="timeout" from="Timer" to="borders" method="_on_timer_timeout"]
[connection signal="timeout" from="Timer2" to="borders" method="_on_timer2_2_timeout"]
[connection signal="body_entered" from="borders/Area2D" to="borders" method="_on_area_2d_body_entered"]
